增加客户端id起始位置

--- a/mqttc/config.cfg
+++ b/mqttc/config.cfg
@@ -11,4 +11,5 @@ recon_maxcount=0, //断线重连重试次数，为0表示无限重连
 topic=c/12345679/info,
 
 start_count=100;//客户端的数量
+start_index=100;//多客户端模式下的起始位置clientid-index
 start_interval=100;//不同客户端之间的连接间隔
