--- a/mqttc/config.cfg
+++ b/mqttc/config.cfg
@@ -1,4 +1,4 @@
-client_id=test-lukai,
+client_id=test-lukai-,
 host=127.0.0.1, //服务端ip
 port=1883,
 username=anjubao-mqtt-client,
@@ -10,6 +10,6 @@ recon_interval=1, //默认为1s,重连实际间隔
 recon_maxcount=0, //断线重连重试次数，为0表示无限重连
 topic=c/12345679/info,
 
-start_count=100;//客户端的数量
-start_index=100;//多客户端模式下的起始位置clientid-index
-start_interval=100;//不同客户端之间的连接间隔
+start_count=200;//客户端的数量
+start_index=0;//多客户端模式下的起始位置clientid-index
+start_interval=10;//不同客户端之间的连接间隔
